object/complexcls1/output.txt
r/include/c++/9/istream:214:7: note:   conversion of argument 1 would be ill-formed:
19.1.complexCls.cpp:99:14: error: cannot bind non-const lvalue reference of type ‘float&’ to an rvalue of type ‘float’
   99 |     in1 >> a.r;
      |            ~~^
In file included from /usr/include/c++/9/iostream:40,
